*openttd-1.3.2_rc2 (15 Jul 2013)

  15 Jul 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.2_rc2.ebuild, -openttd-1.3.2_rc1.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.2_rc1 (01 Jul 2013)

  01 Jul 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.2_rc1.ebuild, -openttd-1.3.1.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.1 (01 Jun 2013)

  01 Jun 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.1.ebuild, -openttd-1.3.1_rc1.ebuild:
  openttd: version bump

*openttd-1.3.1_rc1 (19 May 2013)

  19 May 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.1_rc1.ebuild, -openttd-1.3.0.ebuild:
  games-simulation/openttd: version bump

*openttd-1.3.0 (01 Apr 2013)

  01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0.ebuild:
  openttd: version bumb

  01 Apr 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de> -Manifest,
  -openttd-1.3.0_rc3.ebuild:
  openttd: removed 1.3.0_rc3

*openttd-1.3.0_rc3 (19 Mar 2013)

  19 Mar 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_rc3.ebuild, -openttd-1.3.0_rc2.ebuild:
  openttd: version bump

*openttd-1.3.0_rc2 (07 Mar 2013)

  07 Mar 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  +openttd-1.3.0_rc2.ebuild, -openttd-1.3.0_rc1.ebuild:
  openttd: version bump

  27 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: corrected openmedia dependencies

  21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: doc use flag for nightly

  21 Feb 2013; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
  openttd-1.3.0_rc1.ebuild, openttd-9999.ebuild:
  openttd: added doc use flag

*openttd-1.3.0_rc1 (20 Feb 2013)
